fixed search bar un-alignment

--- a/Style.css
+++ b/Style.css
@@ -111,8 +111,9 @@ body {
   align-items: center;
   justify-content: center;
   display: flex;
-
   text-align: center;
+
+  flex-direction: column;
   
 
 }
@@ -428,18 +429,14 @@ body {
 
 #searchbar {
   position: relative;
-  top: 1%;
-  padding: 5px;
+  top: -6%;
+  padding: 10px;
   margin: 5px;
   z-index: 100;
   outline: none;
   background-color: transparent;
-  
-  /* align center */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
+  width: 500px;
+
   text-align: center;
 
 }
